# microrust_inject_example

./: .gitignore  Cargo.toml  bacon.toml
examples/: complex.rs  mutate.rs  struct.rs  trait.rs
