[package]
name = "microrust_inject_example"
version = "0.0.0-alpha.3"
authors = ["Steve Schneider"]
license = "Apache-2.0"
description = "MicroRust Dependency Injection Example"
readme = false
edition = "2024"
resolver = "2"

[dependencies]
microrust_inject = { path = "../microrust/inject" }
# microrust_inject = "0.0.0-alpha.4"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
async-trait = "0.1.89"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = "z"
strip = true
